--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Dopefolio</title>
-    <meta name="description" content="Portfolio Template for Developer" />
+    <title>Carlo's Portfolio</title>
+    <meta name="description" content="Carlo's Portfolio" />
 
     <link rel="stylesheet" href="css/style.css" />
 
@@ -22,12 +22,12 @@
         <div class="header__logo-container">
           <div class="header__logo-img-cont">
             <img
-              src="./assets/png/john-doe.png"
-              alt="Ram Maheshwari Logo Image"
+              src="./assets/png/cryo.png"
+              alt="Carlo Ryoshin Logo Image"
               class="header__logo-img"
             />
           </div>
-          <span class="header__logo-sub">John Doe</span>
+          <span class="header__logo-sub">Carlo Ryoshin</span>
         </div>
         <div class="header__main">
           <ul class="header__links">
@@ -84,12 +84,10 @@
     </header>
     <section class="home-hero">
       <div class="home-hero__content">
-        <h1 class="heading-primary">Hey, My name is John Doe</h1>
+        <h1 class="heading-primary">Hey, I'm Carlo Ryoshin</h1>
         <div class="home-hero__info">
           <p class="text-primary">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente solutions for
-            complex problems
+            A Frontend Developer Specialized in Shopify and HTML Email Development. 
           </p>
         </div>
         <div class="home-hero__cta">
@@ -98,7 +96,7 @@
       </div>
       <div class="home-hero__socials">
         <div class="home-hero__social">
-          <a href="#" class="home-hero__social-icon-link">
+          <a href="https://www.linkedin.com/in/carlo-ryoshin-81985216a/" target="_blank" class="home-hero__social-icon-link">
             <img
               src="./assets/png/linkedin-ico.png"
               alt="icon"
@@ -107,7 +105,7 @@
           </a>
         </div>
         <div class="home-hero__social">
-          <a href="#" class="home-hero__social-icon-link">
+          <a href="https://github.com/CDirRyo" target="_blank" class="home-hero__social-icon-link">
             <img
               src="./assets/png/github-ico.png"
               alt="icon"
@@ -116,30 +114,18 @@
           </a>
         </div>
         <div class="home-hero__social">
-          <a href="#" class="home-hero__social-icon-link">
+          <a href="https://www.upwork.com/freelancers/~016e72cdb2e9b9ce28" target="_blank" class="home-hero__social-icon-link">
             <img
-              src="./assets/png/twitter-ico.png"
+              src="./assets/png/upwork-ico.png"
               alt="icon"
               class="home-hero__social-icon"
             />
           </a>
         </div>
         <div class="home-hero__social">
-          <a href="#" class="home-hero__social-icon-link">
+          <a href="https://www.fiverr.com/ryoshin" target="_blank" class="home-hero__social-icon-link">
             <img
-              src="./assets/png/yt-ico.png"
-              alt="icon"
-              class="home-hero__social-icon"
-            />
-          </a>
-        </div>
-        <div class="home-hero__social">
-          <a
-            href="#"
-            class="home-hero__social-icon-link home-hero__social-icon-link--bd-none"
-          >
-            <img
-              src="./assets/png/insta-ico.png"
+              src="./assets/png/fiverr-ico.png"
               alt="icon"
               class="home-hero__social-icon"
             />
@@ -155,8 +141,7 @@
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main">About Me</span>
           <span class="heading-sec__sub">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente
+           Here you'll find a little about me, what I do, my current skills, and how I can help you!
           </span>
         </h2>
         <div class="about__content">
@@ -164,21 +149,7 @@
             <h3 class="about__content-title">Get to know me!</h3>
             <div class="about__content-details">
               <p class="about__content-details-para">
-                Hey! It's
-                <strong>John Doe</strong>
-                and I'm a <strong> Frontend Web Developer </strong> located in
-                Los Angeles. I've done
-                <strong> remote </strong>
-                projects for agencies, consulted for startups, and collaborated
-                with talented people to create
-                <strong>digital products </strong>
-                for both business and consumer use.
-              </p>
-              <p class="about__content-details-para">
-                I'm a bit of a digital product junky. Over the years, I've used
-                hundreds of web and mobile apps in different industries and
-                verticals. Feel free to
-                <strong>contact</strong> me here.
+                Hello! I'm a Freelance Frontend Developer specializing in <strong>Shopify</strong> and <strong>HTML emails</strong>. With a strong background in both e-commerce and email marketing, I have a unique skill set that allows me to provide valuable solutions for my clients.<br><br> I have worked on a variety of projects, including building <strong>custom email templates</strong> and setting up and optimizing <strong>Shopify stores</strong>. My goal is to help businesses succeed by providing them with high-quality, user-friendly web and email solutions.<br><br> If you're in need of a reliable and skilled developer for your Shopify store or email marketing efforts, <strong>I'd love to hear from you!</strong> Feel free to reach out to me to discuss your project needs and how I can help.
               </p>
             </div>
             <a href="./#contact" class="btn btn--med btn--theme dynamicBgClr"
@@ -194,12 +165,11 @@
               <div class="skills__skill">React</div>
               <div class="skills__skill">SASS</div>
               <div class="skills__skill">GIT</div>
+              <div class="skills__skill">GitHub</div>
               <div class="skills__skill">Shopify</div>
-              <div class="skills__skill">Wordpress</div>
-              <div class="skills__skill">Google ADS</div>
-              <div class="skills__skill">Facebook Ads</div>
-              <div class="skills__skill">Android</div>
-              <div class="skills__skill">IOS</div>
+              <div class="skills__skill">Liquid</div>
+              <div class="skills__skill">MJML</div>
+              <div class="skills__skill">Figma</div>
             </div>
           </div>
         </div>
@@ -210,78 +180,108 @@
         <h2 class="heading heading-sec heading-sec__mb-bg">
           <span class="heading-sec__main">Projects</span>
           <span class="heading-sec__sub">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente
+            Here you'll find some of the personal projects I've done, what technologies I used and a link to a live project page.
           </span>
         </h2>
 
         <div class="projects__content">
           <div class="projects__row">
             <div class="projects__row-img-cont">
-              <img
-                src="./assets/jpeg/project-mockup-example.jpeg"
-                alt="Software Screenshot"
-                class="projects__row-img"
+              <img 
+                src="./assets/png/ikhokha-project.png"
                 loading="lazy"
+                class="projects__row-img"
+                alt="ikhokha project"
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 1</h3>
+              <h3 class="projects__row-content-title">ikhokha</h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                This project is a <strong>black friday</strong> email by ikokha. The design was taken from <a href="https://reallygoodemails.com/emails/youll-kick-yourself-if-you-dont" target="_blank">reallygoodemails</a>.
               </p>
+              <div class="skills">
+                <div class="skills__skill">HTML</div>
+                <div class="skills__skill">CSS</div>
+                <div class="skills__skill">MJML</div>
+              </div>
               <a
-                href="./project-1.html"
+                href="https://cdirryo.github.io/iKhokha-clone-email/"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
-                >Case Study</a
+                >Live Link</a
+              >
+            </div>
+          </div>
+          <div class="projects__row">
+            <div class="projects__row-img-cont">
+              <img 
+                src="./assets/png/lecol-project.png"
+                loading="lazy"
+                class="projects__row-img"
+                alt="lecol project"
+              />
+            </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">Le Col</h3>
+              <p class="projects__row-content-desc">
+                This project is a <strong>product update</strong> email by Le Col. The design was taken from <a href="https://reallygoodemails.com/emails/new-season-aqua-zero" target="_blank">reallygoodemails</a>.
+              </p>
+              <div class="skills">
+                <div class="skills__skill">HTML</div>
+                <div class="skills__skill">CSS</div>
+                <div class="skills__skill">MJML</div>
+              </div>
+              <a
+                href="https://cdirryo.github.io/lecol-clone-email/"
+                class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank"
+                >Live Link</a
+              >
+            </div>
+          </div>
+          <div class="projects__row">
+            <div class="projects__row-img-cont">
+              <img 
+                src="./assets/png/everlane-project.png"
+                loading="lazy"
+                class="projects__row-img"
+                alt="everlane project"
+              />
+            </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">Everlane</h3>
+              <p class="projects__row-content-desc">
+                This project is an <strong>abandoned cart</strong> email by Everlane. The design was taken from <a href="https://reallygoodemails.com/emails/eyeing-something" target="_blank">reallygoodemails</a>.
+              </p>
+              <div class="skills">
+                <div class="skills__skill">HTML</div>
+                <div class="skills__skill">CSS</div>
+                <div class="skills__skill">MJML</div>
+              </div>
+              <a
+                href="https://cdirryo.github.io/everlane-clone-email/"
+                class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank"
+                >Live Link</a
               >
             </div>
           </div>
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/jpeg/project-mockup-example.jpeg"
+                src="./assets/png/trendsetters-den-project.png"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 2</h3>
+              <h3 class="projects__row-content-title">The Trendsetter's Den</h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                The Trendsetter's Den is a trendy, versatile clothing store that offers a wide range of clothing and accessory options for both men and women. The store's aesthetic is modern and fashionable, with a focus on a mix of classic and trendy styles.
               </p>
               <a
-                href="./project-2.html"
-                class="btn btn--med btn--theme dynamicBgClr"
-                target="_blank"
-                >Case Study</a
-              >
-            </div>
-          </div>
-          <div class="projects__row">
-            <div class="projects__row-img-cont">
-              <img
-                src="./assets/jpeg/project-mockup-example.jpeg"
-                alt="Software Screenshot"
-                class="projects__row-img"
-                loading="lazy"
-              />
-            </div>
-            <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 3</h3>
-              <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
-              </p>
-              <a
-                href="./project-3.html"
+                href="./trendsetters-den.html"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
                 >Case Study</a
@@ -296,12 +296,11 @@
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main heading-sec__main--lt">Contact</span>
           <span class="heading-sec__sub heading-sec__sub--lt">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente
+            If there's anything I can help you with feel free to leave me a message!
           </span>
         </h2>
         <div class="contact__form-container">
-          <form action="#" class="contact__form">
+          <form method="POST" name="contact" class="contact__form" netlify>
             <div class="contact__form-field">
               <label class="contact__form-label" for="name">Name</label>
               <input
@@ -351,62 +350,52 @@
               <span>Social</span>
             </h2>
             <div class="main-footer__social-cont">
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/carlo-ryoshin-81985216a/">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/linkedin-ico.png"
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://github.com/CDirRyo">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/github-ico.png"
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://www.upwork.com/freelancers/~016e72cdb2e9b9ce28">
                 <img
                   class="main-footer__icon"
-                  src="./assets/png/twitter-ico.png"
+                  src="./assets/png/upwork-ico.png"
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://www.fiverr.com/ryoshin">
                 <img
                   class="main-footer__icon"
-                  src="./assets/png/yt-ico.png"
-                  alt="icon"
-                />
-              </a>
-              <a target="_blank" rel="noreferrer" href="#">
-                <img
-                  class="main-footer__icon main-footer__icon--mr-none"
-                  src="./assets/png/insta-ico.png"
+                  src="./assets/png/fiverr-ico.png"
                   alt="icon"
                 />
               </a>
             </div>
           </div>
           <div class="main-footer__row main-footer__row-2">
-            <h4 class="heading heading-sm text-lt">John Doe</h4>
+            <h4 class="heading heading-sm text-lt">Carlo Ryoshin</h4>
             <p class="main-footer__short-desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit facilis
-              tempora explicabo quae quod deserunt
+              A Frontend Developer Specialized in Shopify and HTML Email Development.
             </p>
           </div>
         </div>
 
-        <!-- If you give me some credit or shoutout here by linking to my website, then it will be a big thing for me and will help me a lot :) -->
         <div class="main-footer__lower">
-          &copy; Copyright 2021. Made by
-          <a rel="noreferrer" target="_blank" href="https://rammaheshwari.com"
-            >Ram Maheshwari</a
-          >
+          &copy; Copyright 2022
         </div>
       </div>
     </footer>
 
     <script src="./index.js"></script>
+    <script src="./home.js"></script>
+
   </body>
 </html>
