Adjusted some branding elements

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Carlo's Portfolio" />
 
     <link rel="stylesheet" href="css/style.css" />
-
+    <link rel="icon" type="image/x-icon" href="/assets/png/cryo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
