--- a/trendsetters-den.html
+++ b/trendsetters-den.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Case Study of Project 1</title>
-    <meta name="description" content="Case study page of Project" />
+    <title>Case Study of The Trendsetter's Den</title>
+    <meta name="description" content="Case Study of The Trendsetter's Den" />
 
     <link rel="stylesheet" href="css/style.css" />
-
+    <link rel="icon" type="image/x-icon" href="/assets/png/cryo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -23,7 +23,7 @@
           <div class="header__logo-img-cont">
             <img
               src="./assets/png/cryo.png"
-              alt="Ram Maheshwari Logo Image"
+              alt="Carlo Ryoshin Logo Image"
               class="header__logo-img"
             />
           </div>
