--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       </div>
       <div class="home-hero__socials">
         <div class="home-hero__social">
-          <a href="https://www.linkedin.com/in/carlo-ryoshin-81985216a/" target="_blank" class="home-hero__social-icon-link">
+          <a href="#" target="_blank" class="home-hero__social-icon-link">
             <img
               src="./assets/png/linkedin-ico.png"
               alt="icon"
@@ -350,7 +350,7 @@
               <span>Social</span>
             </h2>
             <div class="main-footer__social-cont">
-              <a target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/carlo-ryoshin-81985216a/">
+              <a target="_blank" rel="noreferrer" href="#">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/linkedin-ico.png"
