--- a/trendsetters-den.html
+++ b/trendsetters-den.html
@@ -150,7 +150,7 @@
               <span>Social</span>
             </h2>
             <div class="main-footer__social-cont">
-              <a target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/carlo-ryoshin-81985216a/">
+              <a target="_blank" rel="noreferrer" href="#">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/linkedin-ico.png"
